--- a/tp-final/data.yaml
+++ b/tp-final/data.yaml
@@ -51,5 +51,5 @@ names:
 - S
 - SS
 nc: 51
-train: yolo-format/images/train/
-val: yolo-format/images/val/
+train: ./datasets/yolo-format/images/train/
+val: ./datasets/yolo-format/images/val/
